--- a/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator.csproj
+++ b/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shortest Seek Time First Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Shortest Seek Time First Form.Designer.cs">
+      <DependentUpon>Shortest Seek Time First Form.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +73,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Shortest Seek Time First Form.resx">
+      <DependentUpon>Shortest Seek Time First Form.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
