--- a/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator.csproj
+++ b/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator/Disk Scheduling Algorithm Simulator.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scan Disk Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Scan Disk Form.Designer.cs">
+      <DependentUpon>Scan Disk Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Shortest Seek Time First Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Scan Disk Form.resx">
+      <DependentUpon>Scan Disk Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Shortest Seek Time First Form.resx">
       <DependentUpon>Shortest Seek Time First Form.cs</DependentUpon>
     </EmbeddedResource>
